# modular

./: .gitignore  COMPILER_CICD_SUMMARY.md
.github/workflows/: build_and_test.yml
mojo/compiler/: BACKEND_IMPLEMENTATION_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  BUILD.bazel  CONTRIBUTING.md  DEVELOPER_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_UPDATE_2026_01_22.md  IMPLEMENTATION_VERIFICATION_SUMMARY.md  MLIR_GENERATION_COMPLETE.md  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETION_REPORT.md  PHASE_4_COMPLETION_REPORT.md  PHASE_4_PR_SUMMARY.md  PR_SUMMARY.md  README.md  TASK_COMPLETE.md  VERIFICATION_REPORT.md  compiler_demo.mojo  examples_usage.mojo  test_backend.mojo  test_compiler_pipeline.mojo  test_control_flow.mojo  test_end_to_end.mojo  test_lexer.mojo  test_mlir_gen.mojo  test_operators.mojo  test_phase2_structs.mojo  test_phase3_iteration.mojo  test_phase3_traits.mojo  test_phase4_generics.mojo  test_phase4_inference.mojo  test_phase4_ownership.mojo  test_structs.mojo  test_type_checker.mojo
mojo/compiler/docs/: CICD_INTEGRATION.md  architecture.md
mojo/compiler/docs/archive/: FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_FIXES.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  MLIR_IMPLEMENTATION_SUMMARY.md  OPERATORS_COMPLETE.md  PARSER_IMPLEMENTATION_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_FINAL_SUMMARY.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_VALIDATION.md  PR_FINAL_SUMMARY.md  README.md  TASK_COMPLETION_REPORT.md  TASK_COMPLETION_REPORT_MLIR.md  TYPE_CHECKER_COMPLETION_REPORT.md  TYPE_CHECKER_IMPLEMENTATION.md  TYPE_CHECKER_SUMMARY.md
mojo/compiler/examples/: control_flow.mojo  hello_world.md  loops.mojo  operators.mojo  phase4_generics.mojo  phase4_inference.mojo  phase4_ownership.mojo  simple_function.mojo  structs.mojo
mojo/compiler/runtime/: Makefile  README.md  print.c
mojo/compiler/src/: BUILD.bazel  __init__.mojo
mojo/compiler/src/codegen/: __init__.mojo  llvm_backend.mojo  optimizer.mojo
mojo/compiler/src/frontend/: __init__.mojo  ast.mojo  lexer.mojo  node_store.mojo  parser.mojo  source_location.mojo
mojo/compiler/src/ir/: __init__.mojo  mlir_gen.mojo  mojo_dialect.mojo
mojo/compiler/src/runtime/: __init__.mojo  async_runtime.mojo  memory.mojo  reflection.mojo
mojo/compiler/src/semantic/: __init__.mojo  symbol_table.mojo  type_checker.mojo  type_system.mojo
mojo/proposals/: README.md  open-source-compiler.md
mojo/stdlib/docs/: faq.md
